Fixed alignment

--- a/resources/css/sass/pages/_header.scss
+++ b/resources/css/sass/pages/_header.scss
@@ -51,7 +51,7 @@
                         color: $blue;
                         font-size: 15px;
                         margin-right: -10px;
-                        padding-top: 8px;
+                        padding-top: 2px;
                         text-transform: uppercase;
                         font-family: 'Helvetica Neue';
                     }
